# hailort

./: .gitignore  build_hailort_android.sh
common/include/: byte_order.h  context_switch_defs.h  control_protocol.h  firmware_header.h  firmware_header_utils.h  firmware_status.h  firmware_version.h  logger_level.h  sensor_config_exports.h  user_config_common.h  utils.h
common/src/: firmware_header_utils.c  firmware_status.c
hailort/: CMakeLists.txt  LICENSE-3RD-PARTY.md
hailort/common/: CMakeLists.txt  async_thread.hpp  barrier.cpp  barrier.hpp  buffer_pool.cpp  buffer_pool.hpp  circular_buffer.hpp  compiler_extensions_compat.hpp  device_measurements.cpp  device_measurements.hpp  env_vars.hpp  event_internal.cpp  event_internal.hpp  file_descriptor.hpp  file_utils.cpp  file_utils.hpp  filesystem.hpp  filesystem_common.cpp  fork_support.cpp  fork_support.hpp  internal_env_vars.hpp  latency_meter.hpp  logger_macros.hpp  mmap_buffer.hpp  named_mutex.hpp  object_pool.hpp  os_utils.hpp  process.hpp  runtime_statistics_internal.hpp  shared_memory_buffer.hpp  socket.hpp  thread_pool.hpp  thread_safe_queue.hpp  utils.cpp  utils.hpp
hailort/common/genai/: connection_ports.hpp  constants.hpp  eigen.hpp
hailort/common/genai/serializer/: genai_scheme.proto  serializer.cpp  serializer.hpp
hailort/common/genai/session_wrapper/: session_wrapper.cpp  session_wrapper.hpp
hailort/common/genai/tokenizer/: embedding_view_wrapper.hpp  (+3 more)
hailort/hailort_server/: CMakeLists.txt  cng_buffer_pool.cpp  cng_buffer_pool.hpp  hailort_server.cpp  hailort_server.hpp  hailort_server.service  hailort_server.sh  server_main.cpp
hailort/hailort_server/genai/: genai_server.cpp  genai_server.hpp  inference_manager.cpp  inference_manager.hpp  utils.hpp
hailort/hailort_server/usb/: hailort_usb_flicker.sh  hailort_usb_setup.sh  usb_functionfs_configure.cpp  usb_functionfs_configure.hpp
hailort/hailortcli/: CMakeLists.txt  benchmark_command.cpp  benchmark_command.hpp  board_config_command.cpp  board_config_command.hpp  buffer_utils.hpp  command.cpp  command.hpp  common.cpp  common.hpp  download_action_list_command.cpp  download_action_list_command.hpp  fw_control_command.cpp  fw_control_command.hpp  graph_printer.cpp  graph_printer.hpp  hailortcli.cpp  hailortcli.hpp  infer_stats_printer.cpp  infer_stats_printer.hpp  inference_progress.cpp  inference_progress.hpp  inference_result.hpp  logs_command.cpp  logs_command.hpp  measure_nnc_performance_command.cpp  measure_nnc_performance_command.hpp  memory_requirements_command.cpp  memory_requirements_command.hpp  mon_command.cpp  mon_command.hpp  parse_hef_command.cpp  parse_hef_command.hpp  power_measurement_command.cpp  power_measurement_command.hpp  run_command.cpp  run_command.hpp  scan_command.cpp  scan_command.hpp
hailort/hailortcli/hailo_monitor/: accelerator_monitor.cpp  accelerator_monitor.hpp  hailo_monitor.cpp  hailo_monitor.hpp  integrated_monitor.cpp  integrated_monitor.hpp  monitor_common.cpp  monitor_common.hpp
hailort/hailortcli/run2/: io_wrappers.cpp  io_wrappers.hpp  live_stats.cpp  live_stats.hpp  measurement_live_track.cpp  measurement_live_track.hpp  network_live_track.cpp  network_live_track.hpp  network_runner.cpp  network_runner.hpp  run2_command.cpp  run2_command.hpp  timer_live_track.cpp  timer_live_track.hpp
hailort/hrpc/: CMakeLists.txt  client.cpp  client.hpp  connection_context.cpp  connection_context.hpp  hailo_session.cpp  response_writer.hpp  rpc_connection.cpp  rpc_connection.hpp  server.cpp  server.hpp  server_resource_manager.hpp
hailort/hrpc/session_internal/: async_actions_thread.cpp  async_actions_thread.hpp  eth_session.cpp  eth_session.hpp  pcie_session_internal.cpp  pcie_session_internal.hpp
hailort/hrpc/session_internal/usb/: usb_control_protocol.hpp  usb_session.hpp  usb_session_common.cpp
hailort/hrpc/session_internal/usb/usb_device/: aio_context.cpp  aio_context.hpp  usb_control_listener.cpp  usb_control_listener.hpp  usb_device_side.cpp  usb_device_side.hpp  usb_event_loop.cpp  usb_event_loop.hpp  usb_session_noimpl_device.cpp
hailort/hrpc/session_internal/usb/usb_host/: libusb_event_thread.cpp  libusb_event_thread.hpp  usb_host_side.cpp  usb_host_side.hpp  usb_session_noimpl_host.cpp  usb_transfer_queue.cpp  usb_transfer_queue.hpp
hailort/hrpc_protocol/: rpc.proto  serializer.cpp  serializer.hpp
hailort/libhailopp/: CMakeLists.txt  Config.cmake.in
hailort/libhailopp/examples/: CMakeLists.txt
hailort/libhailopp/examples/hailopp/: CMakeLists.txt
hailort/libhailopp/examples/hailopp/hailopp_mot17_demo/: CMakeLists.txt  mot17_demo.cpp
hailort/libhailopp/include/: expected.hpp  hailotracker.h  platform.h  status.h
hailort/libhailopp/src/: CMakeLists.txt  utils.hpp
hailort/libhailopp/src/hailotracker/: CMakeLists.txt  association.cpp  association.hpp  eigen_wrapper.hpp  hailotracker.cpp  kalman_filter.cpp  kalman_filter.hpp  tracker_core.cpp  tracker_core.hpp  tracklet.cpp  tracklet.hpp
hailort/libhailort/: CMakeLists.txt  hef.proto
hailort/libhailort/doc/: CMakeLists.txt
hailort/libhailort/examples/: README.md
hailort/libhailort/examples/c/multi_network_vstream_example/: CMakeLists.txt  multi_network_vstream_example.c
hailort/libhailort/examples/c/notification_callback_example/: CMakeLists.txt  notification_callback_example.c
hailort/libhailort/examples/c/raw_async_streams_single_thread_example/: CMakeLists.txt  raw_async_streams_single_thread_example.c
hailort/libhailort/examples/cpp/async_infer_advanced_example/: CMakeLists.txt  async_infer_advanced_example.cpp
hailort/libhailort/examples/cpp/multi_model_inference_example/: CMakeLists.txt  multi_model_inference_example.cpp
hailort/libhailort/examples/genai/chat_raw_prompt_example/: CMakeLists.txt  README.md  chat_raw_prompt.cpp
hailort/libhailort/examples/genai/vlm_example/: CMakeLists.txt  vlm_example.cpp
hailort/libhailort/src/: CMakeLists.txt  hailort.cpp  hailort_defaults.cpp
hailort/prepare_externals/: CMakeLists.txt
hailort/scripts/: download_hefs.cmd  download_hefs.sh  install_usb.sh  uninstall_usb.sh
(+433 files in other folders)
